src/test/ui/command-line-diagnostics.stderr
error[E0384]: cannot assign twice to immutable variable `x`
  --> $DIR/command-line-diagnostics.rs:6:5
   |
LL |     let x = 42;
   |         -
   |         |
   |         first assignment to `x`
   |         If I were you, I would simply make this binding mutable: `mut x`
LL |     x = 43;
   |     ^^^^^^ cannot assign twice to immutable variable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0384`.
